      by default. (John Arbash Meinel)

    * The parent of Bzr configuration directory can be set by BZR_HOME
      environment variable. Now the path for it is searched in BZR_HOME, then
      in HOME. Under Windows the order is: BZR_HOME, APPDATA (usually
      points to C:\Documents and Settings\User Name\Application Data), HOME.
      (John Arbash Meinel)

  IMPROVEMENTS:

    * "bzr INIT dir" now initializes the specified directory, and creates 
      it if it does not exist.  (John Arbash Meinel)

    * New remerge command (Aaron Bentley)

    * Better zsh completion script.  (Steve Borho)

    * 'bzr diff' now returns 1 when there are changes in the working 
      tree. (Robert Collins)

    * 'bzr push' now exists and can push changes to a remote location. 
      This uses the transport infrastructure, and can store the remote
      location in the ~/.bazaar/branches.conf configuration file.
      (Robert Collins)

    * Test directories are only kept if the test fails and the user requests
      that they be kept.

    * Tweaks to short log printing

    * Added branch nicks, new nick command, printing them in log output. 
      (Aaron Bentley)

    * If $BZR_PDB is set, pop into the debugger when an uncaught exception 
      occurs.  (Martin Pool)

    * Accept 'bzr resolved' (an alias for 'bzr resolve'), as this is
      the same as Subversion.  (Martin Pool)

    * New ftp transport support (on ftplib), for ftp:// and aftp:// 
      URLs.  (Daniel Silverstone)

    * Commit editor temporary files now start with 'bzr_log.', to allow 
      text editors to match the file name and set up appropriate modes or 
      settings.  (Magnus Therning)

  BUG FIXES:

    * SFTP can walk up to the root path without index errors. (Robert Collins)

    * Fix bugs in running bzr with 'python -O'.  (Martin Pool)

    * Error when run with -OO

    * Fix bug in reporting http errors that don't have an http error code.
      (Martin Pool)
